--- a/LABA3/LABA3.vcxproj
+++ b/LABA3/LABA3.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="LABA3.cpp" />
     <ClCompile Include="pipe.cpp" />
+    <ClCompile Include="pipe_act.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
