--- a/LABA3/LABA3.vcxproj.filters
+++ b/LABA3/LABA3.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="pipe.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="pipe_act.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
