--- a/LABA3/LABA3.vcxproj
+++ b/LABA3/LABA3.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="pipes_act.cpp" />
     <ClCompile Include="pipe_act.cpp" />
     <ClCompile Include="pipe_sort.cpp" />
+    <ClCompile Include="pumping_station.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
