pumping_station_sort

--- a/LABA3/LABA3.vcxproj
+++ b/LABA3/LABA3.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="pipe_sort.cpp" />
     <ClCompile Include="pumping_station.cpp" />
     <ClCompile Include="pumping_station_act.cpp" />
+    <ClCompile Include="pumping_station_sort.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
