--- a/LABA3/LABA3.vcxproj.filters
+++ b/LABA3/LABA3.vcxproj.filters
@@ -43,4 +43,9 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="file_io.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
