--- a/LABA3/LABA3.vcxproj
+++ b/LABA3/LABA3.vcxproj
@@ -137,6 +137,9 @@
     <ClCompile Include="pumping_station_act.cpp" />
     <ClCompile Include="pumping_station_sort.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="file_io.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
