--- a/LABA3/LABA3.vcxproj.filters
+++ b/LABA3/LABA3.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="file_io.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="graph.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="file_io.h">
