--- a/LABA3/LABA3.vcxproj
+++ b/LABA3/LABA3.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="file_io.cpp" />
+    <ClCompile Include="graph.cpp" />
     <ClCompile Include="LABA3.cpp" />
     <ClCompile Include="pipe.cpp" />
     <ClCompile Include="pipes_act.cpp" />
