--- a/LABA3/LABA3.vcxproj.filters
+++ b/LABA3/LABA3.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClInclude Include="graph.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="pipe.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
