--- a/LABA3/LABA3.vcxproj
+++ b/LABA3/LABA3.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="graph.h" />
     <ClInclude Include="pipe.h" />
     <ClInclude Include="pipe_act.h" />
+    <ClInclude Include="pipe_sort.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
