--- a/LABA3/LABA3.vcxproj.filters
+++ b/LABA3/LABA3.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="pipe_act.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="pipe_sort.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
