--- a/LABA3/LABA3.vcxproj
+++ b/LABA3/LABA3.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="file_io.h" />
     <ClInclude Include="graph.h" />
     <ClInclude Include="pipe.h" />
+    <ClInclude Include="pipes_act.h" />
     <ClInclude Include="pipe_act.h" />
     <ClInclude Include="pipe_sort.h" />
   </ItemGroup>
