--- a/LABA3/LABA3.vcxproj
+++ b/LABA3/LABA3.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="pipes_act.h" />
     <ClInclude Include="pipe_act.h" />
     <ClInclude Include="pipe_sort.h" />
+    <ClInclude Include="pumping_station.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
