--- a/LABA3/LABA3.vcxproj
+++ b/LABA3/LABA3.vcxproj
@@ -141,7 +141,7 @@
   <ItemGroup>
     <ClInclude Include="file_io.h" />
     <ClInclude Include="graph.h" />
-    <ClInclude Include="pimping_station_act.h" />
+    <ClInclude Include="pumping_station_act.h" />
     <ClInclude Include="pipe.h" />
     <ClInclude Include="pipes_act.h" />
     <ClInclude Include="pipe_act.h" />
