--- a/LABA3/LABA3.vcxproj
+++ b/LABA3/LABA3.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="pipe_sort.h" />
     <ClInclude Include="pumping_station.h" />
     <ClInclude Include="pumping_station_sort.h" />
+    <ClInclude Include="utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
