--- a/LABA3/LABA3.vcxproj
+++ b/LABA3/LABA3.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{ca8e4eb2-bab2-4b9c-b2ea-bc756dd7b3e5}</ProjectGuid>
     <RootNamespace>LABA3</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>LABA3</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -128,8 +129,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="file_io.cpp" />
-    <ClCompile Include="graph.cpp" />
-    <ClCompile Include="LABA3.cpp" />
+    <ClCompile Include="graph.cpp">
+      <LanguageStandard Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">stdcpp20</LanguageStandard>
+    </ClCompile>
+    <ClCompile Include="LB3.cpp" />
     <ClCompile Include="pipe.cpp" />
     <ClCompile Include="pipes_act.cpp" />
     <ClCompile Include="pipe_act.cpp" />
